# CrowPanel-ESP32-Terminal-with-3.5-inch-parallel-480x320-TFT-capacitive-touch-RGB-display

./: readme.md
Eagle_SCH&PCB/RGB/: ESP32- 3.5 TFT Display(RGB)-V2.0.brd  ESP32- 3.5 TFT Display(RGB)-V2.0.sch
example/: readme.md
example/Arduino/: readme.md
example/Arduino/ESP_Terminal_3.5inch_SPI_code/LVGL_SPI_/: LVGL_SPI_.ino
example/Arduino/ESP_Terminal_RGB_Arduino/ESP_Terminal_3.5inch_RGB_code/A-BUZZER/: A-BUZZER.ino
example/Arduino/ESP_Terminal_RGB_Arduino/ESP_Terminal_3.5inch_RGB_code/LVGL_RGB_/: LVGL_RGB_.ino
example/Arduino/ESP_Terminal_RGB_Arduino/arduino_tutorial_code/crowpanel-rgb-3.5/: crowpanel-rgb-3.5.ino
example/Arduino/ESP_Terminal_RGB_Arduino/libraries/WiFi/: library.properties
example/Arduino/ESP_Terminal_RGB_Arduino/squareline_example/: squareline_example.ino
example/ESP_IDF/CrowPanel_Terminal_3.5inch_RGB_Capacitive/: CMakeLists.txt  sdkconfig
example/ESP_IDF/CrowPanel_Terminal_3.5inch_RGB_Capacitive/main/: CMakeLists.txt  CrowPanel_Terminal_3.5inch_RGB_Capacitive.cpp
example/ESP_IDF/RGB/RGB PEOJECT/: CMakeLists.txt  sdkconfig.old
example/ESP_IDF/RGB/RGB PEOJECT/main/: CMakeLists.txt  (+1 more)
example/MicroPython/: readme.md
example/MicroPython/CrowPanel_Terminal_RGB_MicroPython/Demo/: Crowpanel_ESP32_RGB_3.5.py  ui_images.py
example/MicroPython/CrowPanel_Terminal_RGB_MicroPython/Examples/: biaopan-3.5.py  button-1-3.5.py  buzzer.py  led.py  sd.py
example/MicroPython/CrowPanel_Terminal_RGB_MicroPython/ui/: ui.py  ui_images.py
example/PlatformIO/: readme.md
example/PlatformIO/CrowPanel_Terminal_3.5inch_RGB_PIO/src/: main.cpp
(+4 files in other folders)
