idf_component_register(SRCS "CrowPanel_Terminal_3.5inch_RGB_Capacitive.cpp""../components/FT6236.cpp"           
                       INCLUDE_DIRS "."
                       "../components/arduino-esp32-master"
                       "../components/LovyanGFX-master"
                       "../components/lvgl-3"
                       "../components/UI"
                       )
